[project]
name = "deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "ipykernel",
    "langchain",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-quickjs>=0.1.4",
    "python-dotenv>=1.2.2",
    "tavily-python",
]
